k8s-files/kubernetes/examples/network-policy/namespace-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-1
  labels:
    namespace: namespace-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "New change"
  name: busybox
  namespace: namespace-1
  labels:
    app: busybox
    namespace: namespace-1
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox
        # command: ["tail -f /dev/null"]
        command: ["sleep", "60m"]
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: busybox
  namespace: namespace-1
  labels:
    app: busybox
    namespace: namespace-1
spec:
  type: ClusterIP
  selector:
    app: busybox
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "New change"
  name: nginx
  namespace: namespace-1
  labels:
    app: nginx
    namespace: namespace-1
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
          - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: namespace-1
  labels:
    app: nginx
    namespace: namespace-1
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: namespace-1
  labels:
    app: apache
    namespace: namespace-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd # <-- APACHE IMAGE
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo Welcome to apache: Node: $MY_NODE_NAME - Namespace: $MY_POD_NAMESPACE - Hostname: $HOSTNAME > htdocs/index.html"]
        # LIFECYCLE DEFINITION END
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 256Mi
          requests:
            cpu: 1
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: namespace-1
  labels:
    app: apache
    namespace: namespace-1
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "New change"
  name: busybox-improved
  namespace: namespace-1
  labels:
    app: busybox-improved
    namespace: namespace-1
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: busybox-improved
  template:
    metadata:
      labels:
        app: busybox-improved
    spec:
      containers:
      - name: busybox-improved
        image: radial/busyboxplus:curl
        # command: ["tail -f /dev/null"]
        command: ["sleep", "600"]
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: busybox-improved
  namespace: namespace-1
  labels:
    app: busybox-improved
    namespace: namespace-1
spec:
  type: ClusterIP
  selector:
    app: busybox-improved
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
